src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__concurrent_both_busy_main_view.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
Main thread AI response line 1                                                  
Main thread AI response line 2                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Streaming (gpt) · Ctrl+O 查 看 详 情                                               
────────────────────────────────────────────────────────────────────────────────
⟩
