src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__ctrl_d_enter_diff_router.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
   1    0 -old                                                                  
   0    1 +new                                                                  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Diff: src/main.rs [1/1] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出           
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
