src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_mode_multiple_files_first.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Diff: src/main.rs [1/3] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出           
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
