src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_mode_multiple_files_second.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
   1    0 -old content 2                                                        
   0    1 +new content 2                                                        
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Diff: src/utils.rs [2/3] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出          
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
