src-tauri/src/bin/ifai/snapshots/ifai__tui__tests__diff_mode_navigation.snap
---
source: src/bin/ifai/tui.rs
expression: text
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 Diff: test.rs [1/1] | ←/→ 或  [/] 切 换 文 件  | j/k 滚 动  | q/Esc 退 出               
────────────────────────────────────────────────────────────────────────────────
(Diff 模 式  - 按  q/Esc/Ctrl+D 退 出 )
